# backend/resource/swagger.json
@@ -48,7 +48,7 @@
         },
         "responses": {
           "200": {
-            "description": "Login Successfully",
+            "description": "Login is success",
             "content": {
               "application/json": {
                 "schema": {
@@ -141,7 +141,7 @@
         },
         "responses": {
           "200": {
-            "description": "Login Successfully"
+            "description": "Register is success"
           },
           "400": {
             "description": "invalid credential fields",
@@ -168,7 +168,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Username should be unique"
+                      "example": "username should be unique"
                     }
                   }
                 }
@@ -726,9 +726,9 @@
       "Login": {
         "title": "Login model",
         "type": "object",
-        "required": ["userName", "password"],
+        "required": ["username", "password"],
         "properties": {
-          "userName": {
+          "username": {
             "type": "string",
             "example": "jackie or jackie@gmail.com"
           },
@@ -741,9 +741,9 @@
       "Register": {
         "title": "Register model",
         "type": "object",
-        "required": ["userName", "email", "password"],
+        "required": ["username", "email", "password"],
         "properties": {
-          "userName": {
+          "username": {
             "type": "string",
             "example": "jackie"
           },
@@ -900,13 +900,13 @@
       "PostView": {
         "title": "Post View model",
         "type": "object",
-        "required": ["id", "userName", "date", "textFields", "numberFields", "dateFields", "linkFields", "locationFiels"],
+        "required": ["id", "username", "date", "textFields", "numberFields", "dateFields", "linkFields", "locationFiels"],
         "properties": {
           "id": {
             "type": "string",
             "example": ""
           },
-          "userName": {
+          "username": {
             "type": "string",
             "example": "user98"
           },
