# backend/src/validations/auth.validation.js
@@ -6,7 +6,6 @@ exports.login = {
     .keys({
       email: Joi.string().email().required(),
       password: Joi.string().required(),
-      uniqueId: Joi.string().required(),
     })
     .required(),
 };
@@ -14,11 +13,9 @@ exports.login = {
 exports.register = {
   body: Joi.object()
     .keys({
-      email: Joi.string()
-        .email({ minDomainSegments: 2, tlds: { allow: true } })
-        .required(),
+      email: Joi.string().email().required(),
       password: Joi.string().custom(password).required(),
-      name: Joi.string().min(2).max(30).required(),
+      username: Joi.string().min(2).max(30).required(),
     })
     .required(),
 };
